[package]
name = "chiastamp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
