[package]
name = "chiastamp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.3.2", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = {  version = "0.4.42", features = ["serde"] }
chia-wallet-sdk = { version = "0.30", features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
anyhow = "1.0.100"
chia = "0.26.0"
bip39 = "2.2.0"
indexmap = "2.11.4"

